--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,9 +1,9 @@
-#FROM ubuntu:18.04
 FROM python:2.7
 RUN apt-get update -y
-RUN apt-get install -y python-pip python-dev build-essential
+RUN apt-get install -y python-pip python-dev build-essential supervisor
+RUN mkdir -p /var/log/supervisor
+COPY conf/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+CMD ["/usr/bin/supervisord"]
